Thu Mar 22 21:33:37 2001  Chris Cleeland  <cleeland_c@ociweb.com>

        * ace/INET_Addr.h: VxWorks' inet_ntoa doesn't behave like most
 	others, and our use was causing memory leaks.  VxWorks prefers
 	that you use its own inet_ntoa_b, which takes the buffer to fill
 	as an argument.  Thus, for VxWorks, added a data member char buf
 	of the appropriate length so that get_host_addr can use
	inet_ntoa_b to fill that in.
	
        * ace/INET_Addr.i (get_host_addr): For VxWorks only, changed this
	to use the preferred inet_ntoa_b.  This eliminate memory leaks
	under VxWorks.  Thanks to Erik Johannes <ejohannes@oresis.com> for 
	the suggested fix.

Wed Mar 21 19:20:02 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* apps/Gateway/Peer/Peer.cpp (nonblk_put): Fixed a compile error
	  in g++.

Wed Mar 21 17:28:26 2001  Steve Huston  <shuston@riverace.com>

        * ace/Message_Queue.h:
        * ace/Message_Queue_T.h: Moved definition of typedef for
          ACE_DEFAULT_MESSAGE_QUEUE_TYPE from Message_Queue.h to
          Message_Queue_T.h, just after defining ACE_Message_Queue<>.
          Fixes the case where Message_Queue_T.h is included first,
          it includes Message_Queue.h before ACE_Message_Queue<> is
          defined, and that breaks the compile. IBM C/C++ hit this.

Wed Mar 21 16:42:19 2001  Steve Huston  <shuston@riverace.com>

        * bin/auto_compile: Added an option: -notao to ignore the TAO aspects
          of the non-configurable things, like looking at the TAO/ChangeLog.
          Also, now looks for auto_run_tests.lst in the $BUILD/bin directory,
          not the $MODULE/bin directory - this allows some builds to specify
          their own lists.

Wed Mar 21 16:00:56 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

          The followings are contributions from Scott Snyder
          <snyder@fnal.gov> to make ACE happy on Digital UNIX with KCC
          3.4d.

        * include/makeinclude/platform_tru64_kcc.GNU: